<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ContactManager</string>
    <string name="no_address">No address provided</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="email">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="name">Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="select_photo_hint">Change Photo</string>
    <string name="remove_photo_confirm">Remove contact photo?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
</resources>
