<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#fff"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/contact_photo"
                android:layout_alignParentRight="true"
                android:background="#AA000000"
                android:layout_margin="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_toLeftOf="@id/contact_photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    style="?android:attr/listSeparatorTextViewStyle"/>
                <TextView
                    android:id="@+id/contact_full_name"
                    android:hint="@string/first_name_hint"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="3"
                    android:layout_margin="5dp"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:maxLines="2"
            style="?android:attr/listSeparatorTextViewStyle"/>
        <TextView
            android:id="@+id/contact_email"
            android:hint="@string/email_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/txt_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_hint"
            style="?android:attr/listSeparatorTextViewStyle"/>
        <TextView
            android:id="@+id/contact_address"
            android:hint="@string/no_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:lines="2"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>