<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#fff"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/contact_photo_holder"
            android:layout_alignParentRight="true"
            android:background="#AA000000"
            android:layout_margin="2dp"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/new_contact_photo"
                android:src="@drawable/empty_profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_photo_hint"
                android:background="#88FFFFFF"
                android:padding="1dp"
                android:textColor="#000"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_toLeftOf="@id/contact_photo_holder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_first_name"
                android:hint="@string/first_name_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/new_last_name"
                android:hint="@string/last_name_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"
                android:layout_margin="5dp"/>
        </LinearLayout>



    </RelativeLayout>

    <EditText
        android:id="@+id/new_email"
        android:hint="@string/email_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/new_address"
        android:hint="@string/address_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="textPostalAddress"
        android:layout_margin="5dp"/>


</LinearLayout>